# Repo-Mind

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
agents/: __init__.py  diagram_agent.py  docs_agent.py  explainer.py  pipeline.py  planner.py  repo_reader.py  state.py
backend/: main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentPipeline.jsx  AnalysisPanel.jsx  Chat.jsx  Hero.jsx  Navbar.jsx
utils/: __init__.py  github_utils.py
vector_db/: __init__.py  embeddings.py
