[project]
name = "repo-explainer"
version = "2.0.0"
description = "Agentic GitHub Repository Explainer — React + FastAPI + Groq + LangGraph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "groq>=0.12.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.9.0",
    "gitpython>=3.1.40",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "reportlab>=4.2.0",
    "rich>=13.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
